--- a/login-form/src/css/Style.css
+++ b/login-form/src/css/Style.css
@@ -12,15 +12,15 @@ h1{
     text-align: center;
 }
 
+.form-content{
+    margin: auto;
+}
+
 .form-row{
     width: 100%;
     float: left;
     margin: 10px 0px;
     text-align: center;
-}
-
-.form-row-block{
-    margin: auto;
 }
 
 .form-row-label{
